--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -24,7 +24,8 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import os, json"
+    "import os, json\n",
+    "from sklearn.preprocessing import OneHotEncoder"
    ]
   },
   {
@@ -349,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "6d50714b",
    "metadata": {},
    "outputs": [
@@ -473,7 +474,7 @@
        "4      Marvel Comics  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "7edfcf36",
    "metadata": {},
    "outputs": [
@@ -502,7 +503,7 @@
        "Name: Measurements, dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "db4971db",
    "metadata": {},
    "outputs": [
@@ -623,7 +624,7 @@
        "[463 rows x 2 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "1d74378e",
    "metadata": {},
    "outputs": [
@@ -672,6 +673,8 @@
        "      <th>Publisher</th>\n",
        "      <th>Height</th>\n",
        "      <th>Weight</th>\n",
+       "      <th>hero_names</th>\n",
+       "      <th>Powers</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -688,6 +691,8 @@
        "      <td>Marvel Comics</td>\n",
        "      <td>203.0 cm</td>\n",
        "      <td>441.0 kg</td>\n",
+       "      <td>3-D Man</td>\n",
+       "      <td>Agility,Super Strength,Stamina,Super Speed</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -702,6 +707,8 @@
        "      <td>Dark Horse Comics</td>\n",
        "      <td>191.0 cm</td>\n",
        "      <td>65.0 kg</td>\n",
+       "      <td>A-Bomb</td>\n",
+       "      <td>Accelerated Healing,Durability,Longevity,Super...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -716,6 +723,8 @@
        "      <td>DC Comics</td>\n",
        "      <td>185.0 cm</td>\n",
        "      <td>90.0 kg</td>\n",
+       "      <td>Abe Sapien</td>\n",
+       "      <td>Agility,Accelerated Healing,Cold Resistance,Du...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -730,6 +739,8 @@
        "      <td>Marvel Comics</td>\n",
        "      <td>203.0 cm</td>\n",
        "      <td>441.0 kg</td>\n",
+       "      <td>Abin Sur</td>\n",
+       "      <td>Lantern Power Ring</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -744,6 +755,8 @@
        "      <td>Marvel Comics</td>\n",
        "      <td>193.0 cm</td>\n",
        "      <td>122.0 kg</td>\n",
+       "      <td>Abomination</td>\n",
+       "      <td>Accelerated Healing,Intelligence,Super Strengt...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -764,28 +777,35 @@
        "3  {'Height': '203.0 cm', 'Weight': '441.0 kg'}    Abomination   \n",
        "4  {'Height': '193.0 cm', 'Weight': '122.0 kg'}  Absorbing Man   \n",
        "\n",
-       "           Publisher    Height    Weight  \n",
-       "0      Marvel Comics  203.0 cm  441.0 kg  \n",
-       "1  Dark Horse Comics  191.0 cm   65.0 kg  \n",
-       "2          DC Comics  185.0 cm   90.0 kg  \n",
-       "3      Marvel Comics  203.0 cm  441.0 kg  \n",
-       "4      Marvel Comics  193.0 cm  122.0 kg  "
+       "           Publisher    Height    Weight   hero_names  \\\n",
+       "0      Marvel Comics  203.0 cm  441.0 kg      3-D Man   \n",
+       "1  Dark Horse Comics  191.0 cm   65.0 kg       A-Bomb   \n",
+       "2          DC Comics  185.0 cm   90.0 kg   Abe Sapien   \n",
+       "3      Marvel Comics  203.0 cm  441.0 kg     Abin Sur   \n",
+       "4      Marvel Comics  193.0 cm  122.0 kg  Abomination   \n",
+       "\n",
+       "                                              Powers  \n",
+       "0         Agility,Super Strength,Stamina,Super Speed  \n",
+       "1  Accelerated Healing,Durability,Longevity,Super...  \n",
+       "2  Agility,Accelerated Healing,Cold Resistance,Du...  \n",
+       "3                                 Lantern Power Ring  \n",
+       "4  Accelerated Healing,Intelligence,Super Strengt...  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Concatenating Df\n",
-    "df1 = pd.concat((df1, h_w), axis=1)\n",
+    "df1 = pd.concat((df1, h_w, df2), axis=1)\n",
     "df1.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "dc56f1ad",
    "metadata": {},
    "outputs": [
@@ -820,6 +840,8 @@
        "      <th>Publisher</th>\n",
        "      <th>Height</th>\n",
        "      <th>Weight</th>\n",
+       "      <th>hero_names</th>\n",
+       "      <th>Powers</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -835,6 +857,8 @@
        "      <td>Marvel Comics</td>\n",
        "      <td>203.0 cm</td>\n",
        "      <td>441.0 kg</td>\n",
+       "      <td>3-D Man</td>\n",
+       "      <td>Agility,Super Strength,Stamina,Super Speed</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -848,6 +872,8 @@
        "      <td>Dark Horse Comics</td>\n",
        "      <td>191.0 cm</td>\n",
        "      <td>65.0 kg</td>\n",
+       "      <td>A-Bomb</td>\n",
+       "      <td>Accelerated Healing,Durability,Longevity,Super...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -861,6 +887,8 @@
        "      <td>DC Comics</td>\n",
        "      <td>185.0 cm</td>\n",
        "      <td>90.0 kg</td>\n",
+       "      <td>Abe Sapien</td>\n",
+       "      <td>Agility,Accelerated Healing,Cold Resistance,Du...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -874,6 +902,8 @@
        "      <td>Marvel Comics</td>\n",
        "      <td>203.0 cm</td>\n",
        "      <td>441.0 kg</td>\n",
+       "      <td>Abin Sur</td>\n",
+       "      <td>Lantern Power Ring</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -887,6 +917,8 @@
        "      <td>Marvel Comics</td>\n",
        "      <td>193.0 cm</td>\n",
        "      <td>122.0 kg</td>\n",
+       "      <td>Abomination</td>\n",
+       "      <td>Accelerated Healing,Intelligence,Super Strengt...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -900,15 +932,22 @@
        "3   Male  Human / Radiation       bad    No Hair     green    Unknown   \n",
        "4   Male              Human       bad    No Hair      blue    Unknown   \n",
        "\n",
-       "       Hero Name          Publisher    Height    Weight  \n",
-       "0         A-Bomb      Marvel Comics  203.0 cm  441.0 kg  \n",
-       "1     Abe Sapien  Dark Horse Comics  191.0 cm   65.0 kg  \n",
-       "2       Abin Sur          DC Comics  185.0 cm   90.0 kg  \n",
-       "3    Abomination      Marvel Comics  203.0 cm  441.0 kg  \n",
-       "4  Absorbing Man      Marvel Comics  193.0 cm  122.0 kg  "
+       "       Hero Name          Publisher    Height    Weight   hero_names  \\\n",
+       "0         A-Bomb      Marvel Comics  203.0 cm  441.0 kg      3-D Man   \n",
+       "1     Abe Sapien  Dark Horse Comics  191.0 cm   65.0 kg       A-Bomb   \n",
+       "2       Abin Sur          DC Comics  185.0 cm   90.0 kg   Abe Sapien   \n",
+       "3    Abomination      Marvel Comics  203.0 cm  441.0 kg     Abin Sur   \n",
+       "4  Absorbing Man      Marvel Comics  193.0 cm  122.0 kg  Abomination   \n",
+       "\n",
+       "                                              Powers  \n",
+       "0         Agility,Super Strength,Stamina,Super Speed  \n",
+       "1  Accelerated Healing,Durability,Longevity,Super...  \n",
+       "2  Agility,Accelerated Healing,Cold Resistance,Du...  \n",
+       "3                                 Lantern Power Ring  \n",
+       "4  Accelerated Healing,Intelligence,Super Strengt...  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,10 +961,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6493c52c",
+   "id": "d527975d",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "423de136",
+   "metadata": {},
+   "source": [
+    "## Pt.2 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "302bdc3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Compare the average weight of super powers who have Super Speed to those who do not.\n",
+    "\n",
+    "#weight_speed = df1['']"
+   ]
   }
  ],
  "metadata": {
